o remove TP module